It's close, but not working :c

--- a/discord-settings.json
+++ b/discord-settings.json
@@ -1,1 +1,1 @@
-{"musical_treats":{"wasted":"./audio/wasted.mp3"}}
+{"musical_treats":{"wasted":"https://www.youtube.com/watch?v=XEm-anELm10","snake-me-up":"http://www.youtube.com/watch?v=s9x4CulTTTU"}}
